--- a/package.json
+++ b/package.json
@@ -8,117 +8,120 @@
     "@polymer/iron-meta": "3.0.1",
     "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.4.1",
-    "@vaadin/accordion": "23.0.11",
-    "@vaadin/app-layout": "23.0.11",
-    "@vaadin/avatar": "23.0.11",
-    "@vaadin/avatar-group": "23.0.11",
-    "@vaadin/board": "23.0.11",
-    "@vaadin/bundles": "23.0.11",
-    "@vaadin/button": "23.0.11",
-    "@vaadin/charts": "23.0.11",
-    "@vaadin/checkbox": "23.0.11",
-    "@vaadin/checkbox-group": "23.0.11",
-    "@vaadin/combo-box": "23.0.11",
+    "@vaadin/accordion": "23.1.0",
+    "@vaadin/app-layout": "23.1.0",
+    "@vaadin/avatar": "23.1.0",
+    "@vaadin/avatar-group": "23.1.0",
+    "@vaadin/board": "23.1.0",
+    "@vaadin/bundles": "23.1.0",
+    "@vaadin/button": "23.1.0",
+    "@vaadin/charts": "23.1.0",
+    "@vaadin/checkbox": "23.1.0",
+    "@vaadin/checkbox-group": "23.1.0",
+    "@vaadin/combo-box": "23.1.0",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "23.0.11",
-    "@vaadin/confirm-dialog": "23.0.11",
-    "@vaadin/context-menu": "23.0.11",
-    "@vaadin/cookie-consent": "23.0.11",
-    "@vaadin/crud": "23.0.11",
-    "@vaadin/custom-field": "23.0.11",
-    "@vaadin/date-picker": "23.0.11",
-    "@vaadin/date-time-picker": "23.0.11",
-    "@vaadin/details": "23.0.11",
-    "@vaadin/dialog": "23.0.11",
-    "@vaadin/email-field": "23.0.11",
-    "@vaadin/field-base": "23.0.11",
-    "@vaadin/field-highlighter": "23.0.7",
+    "@vaadin/component-base": "23.1.0",
+    "@vaadin/confirm-dialog": "23.1.0",
+    "@vaadin/context-menu": "23.1.0",
+    "@vaadin/cookie-consent": "23.1.0",
+    "@vaadin/crud": "23.1.0",
+    "@vaadin/custom-field": "23.1.0",
+    "@vaadin/date-picker": "23.1.0",
+    "@vaadin/date-time-picker": "23.1.0",
+    "@vaadin/details": "23.1.0",
+    "@vaadin/dialog": "23.1.0",
+    "@vaadin/email-field": "23.1.0",
+    "@vaadin/field-base": "23.1.0",
+    "@vaadin/field-highlighter": "23.1.0-rc3",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/form-layout": "23.0.11",
-    "@vaadin/grid": "23.0.11",
-    "@vaadin/grid-pro": "23.0.11",
-    "@vaadin/horizontal-layout": "23.0.11",
-    "@vaadin/icon": "23.0.11",
-    "@vaadin/icons": "23.0.11",
-    "@vaadin/input-container": "23.0.11",
-    "@vaadin/integer-field": "23.0.11",
-    "@vaadin/item": "23.0.11",
-    "@vaadin/list-box": "23.0.11",
-    "@vaadin/login": "23.0.11",
-    "@vaadin/map": "23.0.11",
-    "@vaadin/menu-bar": "23.0.11",
-    "@vaadin/message-input": "23.0.11",
-    "@vaadin/message-list": "23.0.11",
-    "@vaadin/notification": "23.0.11",
-    "@vaadin/number-field": "23.0.11",
-    "@vaadin/password-field": "23.0.11",
-    "@vaadin/polymer-legacy-adapter": "23.0.11",
-    "@vaadin/progress-bar": "23.0.11",
-    "@vaadin/radio-group": "23.0.11",
-    "@vaadin/rich-text-editor": "23.0.11",
+    "@vaadin/form-layout": "23.1.0",
+    "@vaadin/grid": "23.1.0",
+    "@vaadin/grid-pro": "23.1.0",
+    "@vaadin/horizontal-layout": "23.1.0",
+    "@vaadin/icon": "23.1.0",
+    "@vaadin/icons": "23.1.0",
+    "@vaadin/input-container": "23.1.0",
+    "@vaadin/integer-field": "23.1.0",
+    "@vaadin/item": "23.1.0",
+    "@vaadin/list-box": "23.1.0",
+    "@vaadin/lit-renderer": "23.1.0",
+    "@vaadin/login": "23.1.0",
+    "@vaadin/map": "23.1.0",
+    "@vaadin/menu-bar": "23.1.0",
+    "@vaadin/message-input": "23.1.0",
+    "@vaadin/message-list": "23.1.0",
+    "@vaadin/multi-select-combo-box": "23.1.0",
+    "@vaadin/notification": "23.1.0",
+    "@vaadin/number-field": "23.1.0",
+    "@vaadin/password-field": "23.1.0",
+    "@vaadin/polymer-legacy-adapter": "23.1.0",
+    "@vaadin/progress-bar": "23.1.0",
+    "@vaadin/radio-group": "23.1.0",
+    "@vaadin/rich-text-editor": "23.1.0",
     "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "23.0.11",
-    "@vaadin/select": "23.0.11",
-    "@vaadin/split-layout": "23.0.11",
-    "@vaadin/tabs": "23.0.11",
-    "@vaadin/text-area": "23.0.11",
-    "@vaadin/text-field": "23.0.11",
-    "@vaadin/time-picker": "23.0.11",
-    "@vaadin/upload": "23.0.11",
-    "@vaadin/vaadin-accordion": "23.0.11",
-    "@vaadin/vaadin-app-layout": "23.0.11",
-    "@vaadin/vaadin-avatar": "23.0.11",
-    "@vaadin/vaadin-board": "23.0.11",
-    "@vaadin/vaadin-button": "23.0.11",
-    "@vaadin/vaadin-charts": "23.0.11",
-    "@vaadin/vaadin-checkbox": "23.0.11",
-    "@vaadin/vaadin-combo-box": "23.0.11",
-    "@vaadin/vaadin-confirm-dialog": "23.0.11",
-    "@vaadin/vaadin-context-menu": "23.0.11",
-    "@vaadin/vaadin-cookie-consent": "23.0.11",
-    "@vaadin/vaadin-crud": "23.0.11",
-    "@vaadin/vaadin-custom-field": "23.0.11",
-    "@vaadin/vaadin-date-picker": "23.0.11",
-    "@vaadin/vaadin-date-time-picker": "23.0.11",
-    "@vaadin/vaadin-details": "23.0.11",
+    "@vaadin/scroller": "23.1.0",
+    "@vaadin/select": "23.1.0",
+    "@vaadin/split-layout": "23.1.0",
+    "@vaadin/tabs": "23.1.0",
+    "@vaadin/text-area": "23.1.0",
+    "@vaadin/text-field": "23.1.0",
+    "@vaadin/time-picker": "23.1.0",
+    "@vaadin/upload": "23.1.0",
+    "@vaadin/vaadin-accordion": "23.1.0",
+    "@vaadin/vaadin-app-layout": "23.1.0",
+    "@vaadin/vaadin-avatar": "23.1.0",
+    "@vaadin/vaadin-board": "23.1.0",
+    "@vaadin/vaadin-button": "23.1.0",
+    "@vaadin/vaadin-charts": "23.1.0",
+    "@vaadin/vaadin-checkbox": "23.1.0",
+    "@vaadin/vaadin-combo-box": "23.1.0",
+    "@vaadin/vaadin-confirm-dialog": "23.1.0",
+    "@vaadin/vaadin-context-menu": "23.1.0",
+    "@vaadin/vaadin-cookie-consent": "23.1.0",
+    "@vaadin/vaadin-crud": "23.1.0",
+    "@vaadin/vaadin-custom-field": "23.1.0",
+    "@vaadin/vaadin-date-picker": "23.1.0",
+    "@vaadin/vaadin-date-time-picker": "23.1.0",
+    "@vaadin/vaadin-details": "23.1.0",
     "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-dialog": "23.0.11",
-    "@vaadin/vaadin-form-layout": "23.0.11",
-    "@vaadin/vaadin-grid": "23.0.11",
-    "@vaadin/vaadin-grid-pro": "23.0.11",
-    "@vaadin/vaadin-icon": "23.0.11",
-    "@vaadin/vaadin-icons": "23.0.11",
-    "@vaadin/vaadin-item": "23.0.11",
-    "@vaadin/vaadin-list-box": "23.0.11",
-    "@vaadin/vaadin-list-mixin": "23.0.11",
-    "@vaadin/vaadin-login": "23.0.11",
-    "@vaadin/vaadin-lumo-styles": "23.0.11",
-    "@vaadin/vaadin-material-styles": "23.0.11",
-    "@vaadin/vaadin-menu-bar": "23.0.11",
-    "@vaadin/vaadin-messages": "23.0.11",
-    "@vaadin/vaadin-notification": "23.0.11",
-    "@vaadin/vaadin-ordered-layout": "23.0.11",
-    "@vaadin/vaadin-overlay": "23.0.11",
-    "@vaadin/vaadin-progress-bar": "23.0.11",
-    "@vaadin/vaadin-radio-button": "23.0.11",
-    "@vaadin/vaadin-rich-text-editor": "23.0.11",
-    "@vaadin/vaadin-select": "23.0.11",
-    "@vaadin/vaadin-split-layout": "23.0.11",
-    "@vaadin/vaadin-tabs": "23.0.11",
-    "@vaadin/vaadin-template-renderer": "23.0.11",
-    "@vaadin/vaadin-text-field": "23.0.11",
-    "@vaadin/vaadin-themable-mixin": "23.0.11",
-    "@vaadin/vaadin-time-picker": "23.0.11",
-    "@vaadin/vaadin-upload": "23.0.11",
+    "@vaadin/vaadin-dialog": "23.1.0",
+    "@vaadin/vaadin-form-layout": "23.1.0",
+    "@vaadin/vaadin-grid": "23.1.0",
+    "@vaadin/vaadin-grid-pro": "23.1.0",
+    "@vaadin/vaadin-icon": "23.1.0",
+    "@vaadin/vaadin-icons": "23.1.0",
+    "@vaadin/vaadin-item": "23.1.0",
+    "@vaadin/vaadin-list-box": "23.1.0",
+    "@vaadin/vaadin-list-mixin": "23.1.0",
+    "@vaadin/vaadin-login": "23.1.0",
+    "@vaadin/vaadin-lumo-styles": "23.1.0",
+    "@vaadin/vaadin-material-styles": "23.1.0",
+    "@vaadin/vaadin-menu-bar": "23.1.0",
+    "@vaadin/vaadin-messages": "23.1.0",
+    "@vaadin/vaadin-notification": "23.1.0",
+    "@vaadin/vaadin-ordered-layout": "23.1.0",
+    "@vaadin/vaadin-overlay": "23.1.0",
+    "@vaadin/vaadin-progress-bar": "23.1.0",
+    "@vaadin/vaadin-radio-button": "23.1.0",
+    "@vaadin/vaadin-rich-text-editor": "23.1.0",
+    "@vaadin/vaadin-select": "23.1.0",
+    "@vaadin/vaadin-split-layout": "23.1.0",
+    "@vaadin/vaadin-tabs": "23.1.0",
+    "@vaadin/vaadin-template-renderer": "23.1.0",
+    "@vaadin/vaadin-text-field": "23.1.0",
+    "@vaadin/vaadin-themable-mixin": "23.1.0",
+    "@vaadin/vaadin-time-picker": "23.1.0",
+    "@vaadin/vaadin-upload": "23.1.0",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vaadin-virtual-list": "23.0.11",
-    "@vaadin/vertical-layout": "23.0.11",
-    "@vaadin/virtual-list": "23.0.11",
-    "construct-style-sheets-polyfill": "3.0.4",
+    "@vaadin/vaadin-virtual-list": "23.1.0",
+    "@vaadin/vertical-layout": "23.1.0",
+    "@vaadin/virtual-list": "23.1.0",
+    "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.28.0",
     "lit": "2.2.3"
   },
   "devDependencies": {
+    "async": "3.2.2",
     "chokidar": "^3.5.0",
     "compression-webpack-plugin": "4.0.1",
     "css-loader": "5.2.7",
@@ -134,7 +137,7 @@
     "typescript": "4.5.3",
     "webpack": "4.46.0",
     "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.8.1",
+    "webpack-dev-server": "4.9.0",
     "webpack-merge": "4.2.2",
     "workbox-core": "6.5.0",
     "workbox-precaching": "6.5.0",
@@ -148,116 +151,119 @@
       "@polymer/iron-meta": "3.0.1",
       "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.4.1",
-      "@vaadin/accordion": "23.0.11",
-      "@vaadin/app-layout": "23.0.11",
-      "@vaadin/avatar": "23.0.11",
-      "@vaadin/avatar-group": "23.0.11",
-      "@vaadin/board": "23.0.11",
-      "@vaadin/bundles": "23.0.11",
-      "@vaadin/button": "23.0.11",
-      "@vaadin/charts": "23.0.11",
-      "@vaadin/checkbox": "23.0.11",
-      "@vaadin/checkbox-group": "23.0.11",
-      "@vaadin/combo-box": "23.0.11",
+      "@vaadin/accordion": "23.1.0",
+      "@vaadin/app-layout": "23.1.0",
+      "@vaadin/avatar": "23.1.0",
+      "@vaadin/avatar-group": "23.1.0",
+      "@vaadin/board": "23.1.0",
+      "@vaadin/bundles": "23.1.0",
+      "@vaadin/button": "23.1.0",
+      "@vaadin/charts": "23.1.0",
+      "@vaadin/checkbox": "23.1.0",
+      "@vaadin/checkbox-group": "23.1.0",
+      "@vaadin/combo-box": "23.1.0",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "23.0.11",
-      "@vaadin/confirm-dialog": "23.0.11",
-      "@vaadin/context-menu": "23.0.11",
-      "@vaadin/cookie-consent": "23.0.11",
-      "@vaadin/crud": "23.0.11",
-      "@vaadin/custom-field": "23.0.11",
-      "@vaadin/date-picker": "23.0.11",
-      "@vaadin/date-time-picker": "23.0.11",
-      "@vaadin/details": "23.0.11",
-      "@vaadin/dialog": "23.0.11",
-      "@vaadin/email-field": "23.0.11",
-      "@vaadin/field-base": "23.0.11",
-      "@vaadin/field-highlighter": "23.0.7",
-      "@vaadin/form-layout": "23.0.11",
-      "@vaadin/grid": "23.0.11",
-      "@vaadin/grid-pro": "23.0.11",
-      "@vaadin/horizontal-layout": "23.0.11",
-      "@vaadin/icon": "23.0.11",
-      "@vaadin/icons": "23.0.11",
-      "@vaadin/input-container": "23.0.11",
-      "@vaadin/integer-field": "23.0.11",
-      "@vaadin/item": "23.0.11",
-      "@vaadin/list-box": "23.0.11",
-      "@vaadin/login": "23.0.11",
-      "@vaadin/map": "23.0.11",
-      "@vaadin/menu-bar": "23.0.11",
-      "@vaadin/message-input": "23.0.11",
-      "@vaadin/message-list": "23.0.11",
-      "@vaadin/notification": "23.0.11",
-      "@vaadin/number-field": "23.0.11",
-      "@vaadin/password-field": "23.0.11",
-      "@vaadin/polymer-legacy-adapter": "23.0.11",
-      "@vaadin/progress-bar": "23.0.11",
-      "@vaadin/radio-group": "23.0.11",
-      "@vaadin/rich-text-editor": "23.0.11",
+      "@vaadin/component-base": "23.1.0",
+      "@vaadin/confirm-dialog": "23.1.0",
+      "@vaadin/context-menu": "23.1.0",
+      "@vaadin/cookie-consent": "23.1.0",
+      "@vaadin/crud": "23.1.0",
+      "@vaadin/custom-field": "23.1.0",
+      "@vaadin/date-picker": "23.1.0",
+      "@vaadin/date-time-picker": "23.1.0",
+      "@vaadin/details": "23.1.0",
+      "@vaadin/dialog": "23.1.0",
+      "@vaadin/email-field": "23.1.0",
+      "@vaadin/field-base": "23.1.0",
+      "@vaadin/field-highlighter": "23.1.0-rc3",
+      "@vaadin/form-layout": "23.1.0",
+      "@vaadin/grid": "23.1.0",
+      "@vaadin/grid-pro": "23.1.0",
+      "@vaadin/horizontal-layout": "23.1.0",
+      "@vaadin/icon": "23.1.0",
+      "@vaadin/icons": "23.1.0",
+      "@vaadin/input-container": "23.1.0",
+      "@vaadin/integer-field": "23.1.0",
+      "@vaadin/item": "23.1.0",
+      "@vaadin/list-box": "23.1.0",
+      "@vaadin/lit-renderer": "23.1.0",
+      "@vaadin/login": "23.1.0",
+      "@vaadin/map": "23.1.0",
+      "@vaadin/menu-bar": "23.1.0",
+      "@vaadin/message-input": "23.1.0",
+      "@vaadin/message-list": "23.1.0",
+      "@vaadin/multi-select-combo-box": "23.1.0",
+      "@vaadin/notification": "23.1.0",
+      "@vaadin/number-field": "23.1.0",
+      "@vaadin/password-field": "23.1.0",
+      "@vaadin/polymer-legacy-adapter": "23.1.0",
+      "@vaadin/progress-bar": "23.1.0",
+      "@vaadin/radio-group": "23.1.0",
+      "@vaadin/rich-text-editor": "23.1.0",
       "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "23.0.11",
-      "@vaadin/select": "23.0.11",
-      "@vaadin/split-layout": "23.0.11",
-      "@vaadin/tabs": "23.0.11",
-      "@vaadin/text-area": "23.0.11",
-      "@vaadin/text-field": "23.0.11",
-      "@vaadin/time-picker": "23.0.11",
-      "@vaadin/upload": "23.0.11",
-      "@vaadin/vaadin-accordion": "23.0.11",
-      "@vaadin/vaadin-app-layout": "23.0.11",
-      "@vaadin/vaadin-avatar": "23.0.11",
-      "@vaadin/vaadin-board": "23.0.11",
-      "@vaadin/vaadin-button": "23.0.11",
-      "@vaadin/vaadin-charts": "23.0.11",
-      "@vaadin/vaadin-checkbox": "23.0.11",
-      "@vaadin/vaadin-combo-box": "23.0.11",
-      "@vaadin/vaadin-confirm-dialog": "23.0.11",
-      "@vaadin/vaadin-context-menu": "23.0.11",
-      "@vaadin/vaadin-cookie-consent": "23.0.11",
-      "@vaadin/vaadin-crud": "23.0.11",
-      "@vaadin/vaadin-custom-field": "23.0.11",
-      "@vaadin/vaadin-date-picker": "23.0.11",
-      "@vaadin/vaadin-date-time-picker": "23.0.11",
-      "@vaadin/vaadin-details": "23.0.11",
+      "@vaadin/scroller": "23.1.0",
+      "@vaadin/select": "23.1.0",
+      "@vaadin/split-layout": "23.1.0",
+      "@vaadin/tabs": "23.1.0",
+      "@vaadin/text-area": "23.1.0",
+      "@vaadin/text-field": "23.1.0",
+      "@vaadin/time-picker": "23.1.0",
+      "@vaadin/upload": "23.1.0",
+      "@vaadin/vaadin-accordion": "23.1.0",
+      "@vaadin/vaadin-app-layout": "23.1.0",
+      "@vaadin/vaadin-avatar": "23.1.0",
+      "@vaadin/vaadin-board": "23.1.0",
+      "@vaadin/vaadin-button": "23.1.0",
+      "@vaadin/vaadin-charts": "23.1.0",
+      "@vaadin/vaadin-checkbox": "23.1.0",
+      "@vaadin/vaadin-combo-box": "23.1.0",
+      "@vaadin/vaadin-confirm-dialog": "23.1.0",
+      "@vaadin/vaadin-context-menu": "23.1.0",
+      "@vaadin/vaadin-cookie-consent": "23.1.0",
+      "@vaadin/vaadin-crud": "23.1.0",
+      "@vaadin/vaadin-custom-field": "23.1.0",
+      "@vaadin/vaadin-date-picker": "23.1.0",
+      "@vaadin/vaadin-date-time-picker": "23.1.0",
+      "@vaadin/vaadin-details": "23.1.0",
       "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-dialog": "23.0.11",
-      "@vaadin/vaadin-form-layout": "23.0.11",
-      "@vaadin/vaadin-grid": "23.0.11",
-      "@vaadin/vaadin-grid-pro": "23.0.11",
-      "@vaadin/vaadin-icon": "23.0.11",
-      "@vaadin/vaadin-icons": "23.0.11",
-      "@vaadin/vaadin-item": "23.0.11",
-      "@vaadin/vaadin-list-box": "23.0.11",
-      "@vaadin/vaadin-list-mixin": "23.0.11",
-      "@vaadin/vaadin-login": "23.0.11",
-      "@vaadin/vaadin-lumo-styles": "23.0.11",
-      "@vaadin/vaadin-material-styles": "23.0.11",
-      "@vaadin/vaadin-menu-bar": "23.0.11",
-      "@vaadin/vaadin-messages": "23.0.11",
-      "@vaadin/vaadin-notification": "23.0.11",
-      "@vaadin/vaadin-ordered-layout": "23.0.11",
-      "@vaadin/vaadin-overlay": "23.0.11",
-      "@vaadin/vaadin-progress-bar": "23.0.11",
-      "@vaadin/vaadin-radio-button": "23.0.11",
-      "@vaadin/vaadin-rich-text-editor": "23.0.11",
-      "@vaadin/vaadin-select": "23.0.11",
-      "@vaadin/vaadin-split-layout": "23.0.11",
-      "@vaadin/vaadin-tabs": "23.0.11",
-      "@vaadin/vaadin-template-renderer": "23.0.11",
-      "@vaadin/vaadin-text-field": "23.0.11",
-      "@vaadin/vaadin-themable-mixin": "23.0.11",
-      "@vaadin/vaadin-time-picker": "23.0.11",
-      "@vaadin/vaadin-upload": "23.0.11",
+      "@vaadin/vaadin-dialog": "23.1.0",
+      "@vaadin/vaadin-form-layout": "23.1.0",
+      "@vaadin/vaadin-grid": "23.1.0",
+      "@vaadin/vaadin-grid-pro": "23.1.0",
+      "@vaadin/vaadin-icon": "23.1.0",
+      "@vaadin/vaadin-icons": "23.1.0",
+      "@vaadin/vaadin-item": "23.1.0",
+      "@vaadin/vaadin-list-box": "23.1.0",
+      "@vaadin/vaadin-list-mixin": "23.1.0",
+      "@vaadin/vaadin-login": "23.1.0",
+      "@vaadin/vaadin-lumo-styles": "23.1.0",
+      "@vaadin/vaadin-material-styles": "23.1.0",
+      "@vaadin/vaadin-menu-bar": "23.1.0",
+      "@vaadin/vaadin-messages": "23.1.0",
+      "@vaadin/vaadin-notification": "23.1.0",
+      "@vaadin/vaadin-ordered-layout": "23.1.0",
+      "@vaadin/vaadin-overlay": "23.1.0",
+      "@vaadin/vaadin-progress-bar": "23.1.0",
+      "@vaadin/vaadin-radio-button": "23.1.0",
+      "@vaadin/vaadin-rich-text-editor": "23.1.0",
+      "@vaadin/vaadin-select": "23.1.0",
+      "@vaadin/vaadin-split-layout": "23.1.0",
+      "@vaadin/vaadin-tabs": "23.1.0",
+      "@vaadin/vaadin-template-renderer": "23.1.0",
+      "@vaadin/vaadin-text-field": "23.1.0",
+      "@vaadin/vaadin-themable-mixin": "23.1.0",
+      "@vaadin/vaadin-time-picker": "23.1.0",
+      "@vaadin/vaadin-upload": "23.1.0",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vaadin-virtual-list": "23.0.11",
-      "@vaadin/vertical-layout": "23.0.11",
-      "@vaadin/virtual-list": "23.0.11",
-      "construct-style-sheets-polyfill": "3.0.4",
+      "@vaadin/vaadin-virtual-list": "23.1.0",
+      "@vaadin/vertical-layout": "23.1.0",
+      "@vaadin/virtual-list": "23.1.0",
+      "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.28.0",
-      "lit": "2.1.4"
+      "lit": "2.2.3"
     },
     "devDependencies": {
+      "async": "3.2.2",
       "chokidar": "^3.5.0",
       "compression-webpack-plugin": "4.0.1",
       "css-loader": "5.2.7",
@@ -273,13 +279,13 @@
       "typescript": "4.5.3",
       "webpack": "4.46.0",
       "webpack-cli": "4.9.2",
-      "webpack-dev-server": "4.8.1",
+      "webpack-dev-server": "4.9.0",
       "webpack-merge": "4.2.2",
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0",
       "workbox-webpack-plugin": "6.5.0"
     },
-    "hash": "367ae86ae1830b71d6cc97cf4307a7018dbe2fba4bcc7360b2a0de74726db573"
+    "hash": "07e1123e57db1826c846bedacaae11817e070ec86bdcdf4cc786e12608427b9c"
   },
   "overrides": {
     "@vaadin/accordion": "$@vaadin/accordion",
@@ -396,6 +402,7 @@
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "date-fns": "$date-fns",
     "lit": "$lit",
-    "chokidar": "$chokidar"
+    "chokidar": "$chokidar",
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer"
   }
 }
