--- a/package.json
+++ b/package.json
@@ -3,76 +3,78 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "24.0.0-alpha11",
-    "@vaadin/app-layout": "24.0.0-alpha11",
-    "@vaadin/avatar": "24.0.0-alpha11",
-    "@vaadin/avatar-group": "24.0.0-alpha11",
-    "@vaadin/board": "24.0.0-alpha11",
-    "@vaadin/bundles": "24.0.0-alpha11",
-    "@vaadin/button": "24.0.0-alpha11",
-    "@vaadin/charts": "24.0.0-alpha11",
-    "@vaadin/checkbox": "24.0.0-alpha11",
-    "@vaadin/checkbox-group": "24.0.0-alpha11",
-    "@vaadin/combo-box": "24.0.0-alpha11",
+    "@vaadin-component-factory/vcf-nav": "1.0.6",
+    "@vaadin/accordion": "24.0.0-beta1",
+    "@vaadin/app-layout": "24.0.0-beta1",
+    "@vaadin/avatar": "24.0.0-beta1",
+    "@vaadin/avatar-group": "24.0.0-beta1",
+    "@vaadin/board": "24.0.0-beta1",
+    "@vaadin/bundles": "24.0.0-beta1",
+    "@vaadin/button": "24.0.0-beta1",
+    "@vaadin/charts": "24.0.0-beta1",
+    "@vaadin/checkbox": "24.0.0-beta1",
+    "@vaadin/checkbox-group": "24.0.0-beta1",
+    "@vaadin/combo-box": "24.0.0-beta1",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "24.0.0-alpha11",
-    "@vaadin/confirm-dialog": "24.0.0-alpha11",
-    "@vaadin/context-menu": "24.0.0-alpha11",
-    "@vaadin/cookie-consent": "24.0.0-alpha11",
-    "@vaadin/crud": "24.0.0-alpha11",
-    "@vaadin/custom-field": "24.0.0-alpha11",
-    "@vaadin/date-picker": "24.0.0-alpha11",
-    "@vaadin/date-time-picker": "24.0.0-alpha11",
-    "@vaadin/details": "24.0.0-alpha11",
-    "@vaadin/dialog": "24.0.0-alpha11",
-    "@vaadin/email-field": "24.0.0-alpha11",
-    "@vaadin/field-base": "24.0.0-alpha11",
-    "@vaadin/field-highlighter": "24.0.0-alpha11",
-    "@vaadin/form-layout": "24.0.0-alpha11",
-    "@vaadin/grid": "24.0.0-alpha11",
-    "@vaadin/grid-pro": "24.0.0-alpha11",
-    "@vaadin/horizontal-layout": "24.0.0-alpha11",
-    "@vaadin/icon": "24.0.0-alpha11",
-    "@vaadin/icons": "24.0.0-alpha11",
-    "@vaadin/input-container": "24.0.0-alpha11",
-    "@vaadin/integer-field": "24.0.0-alpha11",
-    "@vaadin/item": "24.0.0-alpha11",
-    "@vaadin/list-box": "24.0.0-alpha11",
-    "@vaadin/lit-renderer": "24.0.0-alpha11",
-    "@vaadin/login": "24.0.0-alpha11",
-    "@vaadin/map": "24.0.0-alpha11",
-    "@vaadin/menu-bar": "24.0.0-alpha11",
-    "@vaadin/message-input": "24.0.0-alpha11",
-    "@vaadin/message-list": "24.0.0-alpha11",
-    "@vaadin/multi-select-combo-box": "24.0.0-alpha11",
-    "@vaadin/notification": "24.0.0-alpha11",
-    "@vaadin/number-field": "24.0.0-alpha11",
-    "@vaadin/overlay": "24.0.0-alpha11",
-    "@vaadin/password-field": "24.0.0-alpha11",
-    "@vaadin/polymer-legacy-adapter": "24.0.0-alpha11",
-    "@vaadin/progress-bar": "24.0.0-alpha11",
-    "@vaadin/radio-group": "24.0.0-alpha11",
-    "@vaadin/rich-text-editor": "24.0.0-alpha11",
+    "@vaadin/component-base": "24.0.0-beta1",
+    "@vaadin/confirm-dialog": "24.0.0-beta1",
+    "@vaadin/context-menu": "24.0.0-beta1",
+    "@vaadin/cookie-consent": "24.0.0-beta1",
+    "@vaadin/crud": "24.0.0-beta1",
+    "@vaadin/custom-field": "24.0.0-beta1",
+    "@vaadin/date-picker": "24.0.0-beta1",
+    "@vaadin/date-time-picker": "24.0.0-beta1",
+    "@vaadin/details": "24.0.0-beta1",
+    "@vaadin/dialog": "24.0.0-beta1",
+    "@vaadin/email-field": "24.0.0-beta1",
+    "@vaadin/field-base": "24.0.0-beta1",
+    "@vaadin/field-highlighter": "24.0.0-beta1",
+    "@vaadin/form-layout": "24.0.0-beta1",
+    "@vaadin/grid": "24.0.0-beta1",
+    "@vaadin/grid-pro": "24.0.0-beta1",
+    "@vaadin/horizontal-layout": "24.0.0-beta1",
+    "@vaadin/icon": "24.0.0-beta1",
+    "@vaadin/icons": "24.0.0-beta1",
+    "@vaadin/input-container": "24.0.0-beta1",
+    "@vaadin/integer-field": "24.0.0-beta1",
+    "@vaadin/item": "24.0.0-beta1",
+    "@vaadin/list-box": "24.0.0-beta1",
+    "@vaadin/lit-renderer": "24.0.0-beta1",
+    "@vaadin/login": "24.0.0-beta1",
+    "@vaadin/map": "24.0.0-beta1",
+    "@vaadin/menu-bar": "24.0.0-beta1",
+    "@vaadin/message-input": "24.0.0-beta1",
+    "@vaadin/message-list": "24.0.0-beta1",
+    "@vaadin/multi-select-combo-box": "24.0.0-beta1",
+    "@vaadin/notification": "24.0.0-beta1",
+    "@vaadin/number-field": "24.0.0-beta1",
+    "@vaadin/overlay": "24.0.0-beta1",
+    "@vaadin/password-field": "24.0.0-beta1",
+    "@vaadin/polymer-legacy-adapter": "24.0.0-beta1",
+    "@vaadin/progress-bar": "24.0.0-beta1",
+    "@vaadin/radio-group": "24.0.0-beta1",
+    "@vaadin/rich-text-editor": "24.0.0-beta1",
     "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "24.0.0-alpha11",
-    "@vaadin/select": "24.0.0-alpha11",
-    "@vaadin/split-layout": "24.0.0-alpha11",
-    "@vaadin/tabs": "24.0.0-alpha11",
-    "@vaadin/tabsheet": "24.0.0-alpha11",
-    "@vaadin/text-area": "24.0.0-alpha11",
-    "@vaadin/text-field": "24.0.0-alpha11",
-    "@vaadin/time-picker": "24.0.0-alpha11",
-    "@vaadin/tooltip": "24.0.0-alpha11",
-    "@vaadin/upload": "24.0.0-alpha11",
+    "@vaadin/scroller": "24.0.0-beta1",
+    "@vaadin/select": "24.0.0-beta1",
+    "@vaadin/split-layout": "24.0.0-beta1",
+    "@vaadin/tabs": "24.0.0-beta1",
+    "@vaadin/tabsheet": "24.0.0-beta1",
+    "@vaadin/text-area": "24.0.0-beta1",
+    "@vaadin/text-field": "24.0.0-beta1",
+    "@vaadin/time-picker": "24.0.0-beta1",
+    "@vaadin/tooltip": "24.0.0-beta1",
+    "@vaadin/upload": "24.0.0-beta1",
     "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-lumo-styles": "24.0.0-alpha11",
-    "@vaadin/vaadin-material-styles": "24.0.0-alpha11",
-    "@vaadin/vaadin-themable-mixin": "24.0.0-alpha11",
+    "@vaadin/vaadin-lumo-styles": "24.0.0-beta1",
+    "@vaadin/vaadin-material-styles": "24.0.0-beta1",
+    "@vaadin/vaadin-themable-mixin": "24.0.0-beta1",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.0.0-alpha11",
-    "@vaadin/virtual-list": "24.0.0-alpha11",
+    "@vaadin/vertical-layout": "24.0.0-beta1",
+    "@vaadin/virtual-list": "24.0.0-beta1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
+    "line-awesome": "1.3.0",
     "lit": "2.6.1",
     "proj4": "2.8.1"
   },
@@ -86,8 +88,8 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "4.9.3",
-    "vite": "4.0.2",
-    "vite-plugin-checker": "0.5.2",
+    "vite": "4.1.1",
+    "vite-plugin-checker": "0.5.5",
     "workbox-build": "6.5.4",
     "workbox-core": "6.5.4",
     "workbox-precaching": "6.5.4"
@@ -165,81 +167,85 @@
     "@polymer/polymer": "$@polymer/polymer",
     "proj4": "$proj4",
     "date-fns": "$date-fns",
-    "@vaadin/overlay": "$@vaadin/overlay"
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
+    "line-awesome": "$line-awesome"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "24.0.0-alpha11",
-      "@vaadin/app-layout": "24.0.0-alpha11",
-      "@vaadin/avatar": "24.0.0-alpha11",
-      "@vaadin/avatar-group": "24.0.0-alpha11",
-      "@vaadin/board": "24.0.0-alpha11",
-      "@vaadin/bundles": "24.0.0-alpha11",
-      "@vaadin/button": "24.0.0-alpha11",
-      "@vaadin/charts": "24.0.0-alpha11",
-      "@vaadin/checkbox": "24.0.0-alpha11",
-      "@vaadin/checkbox-group": "24.0.0-alpha11",
-      "@vaadin/combo-box": "24.0.0-alpha11",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
+      "@vaadin/accordion": "24.0.0-beta1",
+      "@vaadin/app-layout": "24.0.0-beta1",
+      "@vaadin/avatar": "24.0.0-beta1",
+      "@vaadin/avatar-group": "24.0.0-beta1",
+      "@vaadin/board": "24.0.0-beta1",
+      "@vaadin/bundles": "24.0.0-beta1",
+      "@vaadin/button": "24.0.0-beta1",
+      "@vaadin/charts": "24.0.0-beta1",
+      "@vaadin/checkbox": "24.0.0-beta1",
+      "@vaadin/checkbox-group": "24.0.0-beta1",
+      "@vaadin/combo-box": "24.0.0-beta1",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "24.0.0-alpha11",
-      "@vaadin/confirm-dialog": "24.0.0-alpha11",
-      "@vaadin/context-menu": "24.0.0-alpha11",
-      "@vaadin/cookie-consent": "24.0.0-alpha11",
-      "@vaadin/crud": "24.0.0-alpha11",
-      "@vaadin/custom-field": "24.0.0-alpha11",
-      "@vaadin/date-picker": "24.0.0-alpha11",
-      "@vaadin/date-time-picker": "24.0.0-alpha11",
-      "@vaadin/details": "24.0.0-alpha11",
-      "@vaadin/dialog": "24.0.0-alpha11",
-      "@vaadin/email-field": "24.0.0-alpha11",
-      "@vaadin/field-base": "24.0.0-alpha11",
-      "@vaadin/field-highlighter": "24.0.0-alpha11",
-      "@vaadin/form-layout": "24.0.0-alpha11",
-      "@vaadin/grid": "24.0.0-alpha11",
-      "@vaadin/grid-pro": "24.0.0-alpha11",
-      "@vaadin/horizontal-layout": "24.0.0-alpha11",
-      "@vaadin/icon": "24.0.0-alpha11",
-      "@vaadin/icons": "24.0.0-alpha11",
-      "@vaadin/input-container": "24.0.0-alpha11",
-      "@vaadin/integer-field": "24.0.0-alpha11",
-      "@vaadin/item": "24.0.0-alpha11",
-      "@vaadin/list-box": "24.0.0-alpha11",
-      "@vaadin/lit-renderer": "24.0.0-alpha11",
-      "@vaadin/login": "24.0.0-alpha11",
-      "@vaadin/map": "24.0.0-alpha11",
-      "@vaadin/menu-bar": "24.0.0-alpha11",
-      "@vaadin/message-input": "24.0.0-alpha11",
-      "@vaadin/message-list": "24.0.0-alpha11",
-      "@vaadin/multi-select-combo-box": "24.0.0-alpha11",
-      "@vaadin/notification": "24.0.0-alpha11",
-      "@vaadin/number-field": "24.0.0-alpha11",
-      "@vaadin/overlay": "24.0.0-alpha11",
-      "@vaadin/password-field": "24.0.0-alpha11",
-      "@vaadin/polymer-legacy-adapter": "24.0.0-alpha11",
-      "@vaadin/progress-bar": "24.0.0-alpha11",
-      "@vaadin/radio-group": "24.0.0-alpha11",
-      "@vaadin/rich-text-editor": "24.0.0-alpha11",
+      "@vaadin/component-base": "24.0.0-beta1",
+      "@vaadin/confirm-dialog": "24.0.0-beta1",
+      "@vaadin/context-menu": "24.0.0-beta1",
+      "@vaadin/cookie-consent": "24.0.0-beta1",
+      "@vaadin/crud": "24.0.0-beta1",
+      "@vaadin/custom-field": "24.0.0-beta1",
+      "@vaadin/date-picker": "24.0.0-beta1",
+      "@vaadin/date-time-picker": "24.0.0-beta1",
+      "@vaadin/details": "24.0.0-beta1",
+      "@vaadin/dialog": "24.0.0-beta1",
+      "@vaadin/email-field": "24.0.0-beta1",
+      "@vaadin/field-base": "24.0.0-beta1",
+      "@vaadin/field-highlighter": "24.0.0-beta1",
+      "@vaadin/form-layout": "24.0.0-beta1",
+      "@vaadin/grid": "24.0.0-beta1",
+      "@vaadin/grid-pro": "24.0.0-beta1",
+      "@vaadin/horizontal-layout": "24.0.0-beta1",
+      "@vaadin/icon": "24.0.0-beta1",
+      "@vaadin/icons": "24.0.0-beta1",
+      "@vaadin/input-container": "24.0.0-beta1",
+      "@vaadin/integer-field": "24.0.0-beta1",
+      "@vaadin/item": "24.0.0-beta1",
+      "@vaadin/list-box": "24.0.0-beta1",
+      "@vaadin/lit-renderer": "24.0.0-beta1",
+      "@vaadin/login": "24.0.0-beta1",
+      "@vaadin/map": "24.0.0-beta1",
+      "@vaadin/menu-bar": "24.0.0-beta1",
+      "@vaadin/message-input": "24.0.0-beta1",
+      "@vaadin/message-list": "24.0.0-beta1",
+      "@vaadin/multi-select-combo-box": "24.0.0-beta1",
+      "@vaadin/notification": "24.0.0-beta1",
+      "@vaadin/number-field": "24.0.0-beta1",
+      "@vaadin/overlay": "24.0.0-beta1",
+      "@vaadin/password-field": "24.0.0-beta1",
+      "@vaadin/polymer-legacy-adapter": "24.0.0-beta1",
+      "@vaadin/progress-bar": "24.0.0-beta1",
+      "@vaadin/radio-group": "24.0.0-beta1",
+      "@vaadin/rich-text-editor": "24.0.0-beta1",
       "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "24.0.0-alpha11",
-      "@vaadin/select": "24.0.0-alpha11",
-      "@vaadin/split-layout": "24.0.0-alpha11",
-      "@vaadin/tabs": "24.0.0-alpha11",
-      "@vaadin/tabsheet": "24.0.0-alpha11",
-      "@vaadin/text-area": "24.0.0-alpha11",
-      "@vaadin/text-field": "24.0.0-alpha11",
-      "@vaadin/time-picker": "24.0.0-alpha11",
-      "@vaadin/tooltip": "24.0.0-alpha11",
-      "@vaadin/upload": "24.0.0-alpha11",
+      "@vaadin/scroller": "24.0.0-beta1",
+      "@vaadin/select": "24.0.0-beta1",
+      "@vaadin/split-layout": "24.0.0-beta1",
+      "@vaadin/tabs": "24.0.0-beta1",
+      "@vaadin/tabsheet": "24.0.0-beta1",
+      "@vaadin/text-area": "24.0.0-beta1",
+      "@vaadin/text-field": "24.0.0-beta1",
+      "@vaadin/time-picker": "24.0.0-beta1",
+      "@vaadin/tooltip": "24.0.0-beta1",
+      "@vaadin/upload": "24.0.0-beta1",
       "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-lumo-styles": "24.0.0-alpha11",
-      "@vaadin/vaadin-material-styles": "24.0.0-alpha11",
-      "@vaadin/vaadin-themable-mixin": "24.0.0-alpha11",
+      "@vaadin/vaadin-lumo-styles": "24.0.0-beta1",
+      "@vaadin/vaadin-material-styles": "24.0.0-beta1",
+      "@vaadin/vaadin-themable-mixin": "24.0.0-beta1",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.0.0-alpha11",
-      "@vaadin/virtual-list": "24.0.0-alpha11",
+      "@vaadin/vertical-layout": "24.0.0-beta1",
+      "@vaadin/virtual-list": "24.0.0-beta1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
+      "line-awesome": "1.3.0",
       "lit": "2.6.1",
       "proj4": "2.8.1"
     },
@@ -253,12 +259,12 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "4.9.3",
-      "vite": "4.0.2",
-      "vite-plugin-checker": "0.5.2",
+      "vite": "4.1.1",
+      "vite-plugin-checker": "0.5.5",
       "workbox-build": "6.5.4",
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "b329df3c88523d85289790be8ebcb7f1be140345934652a5bdcdd92aeabb4544"
+    "hash": "20acaaa33efec9a5adc3340c650ab2e9189aaabc3447ee9a0c31dd1f17988213"
   }
 }
